--- a/style.css
+++ b/style.css
@@ -2,8 +2,11 @@
   margin: 0;
   padding: 0;
 }
+body {
+  background: #f6f9ff;
+}
 .container {
-  width: 1320px;
+  width: 1140px;
   margin: 0 auto;
 }
 header {
@@ -60,7 +63,7 @@ nav button {
   justify-content: space-between;
   align-items: center;
   padding-top: 120px;
-    padding-bottom: 100px;
+  padding-bottom: 100px;
 }
 
 .actionTitle h6 {
@@ -112,4 +115,57 @@ nav button {
 .counterPart {
   display: flex;
   justify-content: space-around;
+}
+.feedbackPart {
+  padding-top: 100px;
+}
+.feedbackPart h3 {
+  font-weight: bold;
+  font-size: 42px;
+  color: #252432;
+  text-align: center;
+  margin-bottom: 50px;
+}
+.flexPart {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+.titlePart {
+  width: 330px;
+  border-radius: 10px;
+  background: #ffffff;
+  padding: 25px;
+}
+.icons {
+  display: flex;
+  gap: 10px;
+}
+.iconsTitle {
+  width: 300px;
+}
+.iconsTitle h6 {
+  font-weight: bold;
+  font-size: 24px;
+  color: #252432;
+  margin-top: 10px;
+}
+.iconsTitle p {
+  font-weight: 400px;
+  font-size: 18px;
+  color: #252432;
+  margin: 10px 0;
+}
+.reviewer {
+  display: flex;
+  gap: 10px;
+}
+.reviewer img {
+  border-radius: 50%;
+}
+strong {
+  color: rgba(0, 0, 0, 0.581);
+}
+.reviNam p {
+  color: #25243288;
 }
